# zlog-discord

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/zlog-discord/: autogen.py  discord_bot.py  main.py  models.py
tests/: model_test.py  test_main.py
